fix: correction z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,7 @@ header.scrolled {
     padding: 4px;
     border-radius: 8px;
     transition: all 0.3s ease;
-    z-index: 10;
+    z-index: 0;
 }
 
 .share-button:hover {
